docs/api/qiskit/0.19/qiskit.pulse.instructions.Snapshot.mdx
---
title: Snapshot
description: API reference for qiskit.pulse.instructions.Snapshot
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.instructions.Snapshot
---

# Snapshot

<Class id="qiskit.pulse.instructions.Snapshot" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/instructions/snapshot.py" signature="Snapshot(label, snapshot_type='statevector', name=None)" modifiers="class">
  An instruction targeted for simulators, to capture a moment in the simulation.

  Create new snapshot.

  **Parameters**

  *   **label** (`str`) – Snapshot label which is used to identify the snapshot in the output.
  *   **snapshot\_type** (`str`) – Type of snapshot, e.g., “state” (take a snapshot of the quantum state). The types of snapshots offered are defined by the simulator used.
  *   **name** (`Optional`\[`str`]) – Snapshot name which defaults to `label`. This parameter is only for display purposes and is not taken into account during comparison.

  ## Attributes

  <span id="snapshot-channel" />

  ### channel

  <Attribute id="qiskit.pulse.instructions.Snapshot.channel" attributeTypeHint="qiskit.pulse.channels.SnapshotChannel">
    Return the [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on; trivially, a `SnapshotChannel`.

    **Return type**

    [`SnapshotChannel`](qiskit.pulse.channels#qiskit.pulse.channels.SnapshotChannel "qiskit.pulse.channels.SnapshotChannel")
  </Attribute>

  <span id="snapshot-channels" />

  ### channels

  <Attribute id="qiskit.pulse.instructions.Snapshot.channels" attributeTypeHint="Tuple[qiskit.pulse.channels.Channel]">
    Returns channels that this schedule uses.

    **Return type**

    `Tuple`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]
  </Attribute>

  <span id="snapshot-command" />

  ### command

  <Attribute id="qiskit.pulse.instructions.Snapshot.command" attributeTypeHint="qiskit.pulse.commands.command.Command">
    The associated command. Commands are deprecated, so this method will be deprecated shortly.

    **Return type**

    `Command`
  </Attribute>

  <span id="snapshot-duration" />

  ### duration

  <Attribute id="qiskit.pulse.instructions.Snapshot.duration" attributeTypeHint="int">
    Duration of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="snapshot-id" />

  ### id

  <Attribute id="qiskit.pulse.instructions.Snapshot.id" attributeTypeHint="int">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="snapshot-instructions" />

  ### instructions

  <Attribute id="qiskit.pulse.instructions.Snapshot.instructions" attributeTypeHint="Tuple[Tuple[int, qiskit.pulse.instructions.instruction.Instruction]]">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")]]
  </Attribute>

  <span id="snapshot-label" />

  ### label

  <Attribute id="qiskit.pulse.instructions.Snapshot.label" attributeTypeHint="str">
    Label of snapshot.

    **Return type**

    `str`
  </Attribute>

  <span id="snapshot-name" />

  ### name

  <Attribute id="qiskit.pulse.instructions.Snapshot.name" attributeTypeHint="str">
    Name of this instruction.

    **Return type**

    `str`
  </Attribute>

  <span id="snapshot-operands" />

  ### operands

  <Attribute id="qiskit.pulse.instructions.Snapshot.operands" attributeTypeHint="Tuple">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Attribute>

  <span id="snapshot-start-time" />

  ### start\_time

  <Attribute id="qiskit.pulse.instructions.Snapshot.start_time" attributeTypeHint="int">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="snapshot-stop-time" />

  ### stop\_time

  <Attribute id="qiskit.pulse.instructions.Snapshot.stop_time" attributeTypeHint="int">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="snapshot-timeslots" />

  ### timeslots

  <Attribute id="qiskit.pulse.instructions.Snapshot.timeslots" attributeTypeHint="Dict[qiskit.pulse.channels.Channel, List[Tuple[int, int]]]">
    Occupied time slots by this instruction.

    **Return type**

    `Dict`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel"), `List`\[`Tuple`\[`int`, `int`]]]
  </Attribute>

  <span id="snapshot-type" />

  ### type

  <Attribute id="qiskit.pulse.instructions.Snapshot.type" attributeTypeHint="str">
    Type of snapshot.

    **Return type**

    `str`
  </Attribute>

  ## Methods

  <span id="snapshot-call" />

  ### \_\_call\_\_

  <Function id="qiskit.pulse.instructions.Snapshot.__call__" signature="Snapshot.__call__()">
    Deprecated.
  </Function>

  <span id="snapshot-append" />

  ### append

  <Function id="qiskit.pulse.instructions.Snapshot.append" signature="Snapshot.append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (`ScheduleComponent`) – schedule to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="snapshot-ch-duration" />

  ### ch\_duration

  <Function id="qiskit.pulse.instructions.Snapshot.ch_duration" signature="Snapshot.ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="snapshot-ch-start-time" />

  ### ch\_start\_time

  <Function id="qiskit.pulse.instructions.Snapshot.ch_start_time" signature="Snapshot.ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="snapshot-ch-stop-time" />

  ### ch\_stop\_time

  <Function id="qiskit.pulse.instructions.Snapshot.ch_stop_time" signature="Snapshot.ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="snapshot-draw" />

  ### draw

  <Function id="qiskit.pulse.instructions.Snapshot.draw" signature="Snapshot.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, channels_to_plot=None, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, scaling=None, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[*[*SchedStyle*](qiskit.visualization.pulse.qcstyle#qiskit.visualization.pulse.qcstyle.SchedStyle "qiskit.visualization.pulse.qcstyle.SchedStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **channels\_to\_plot** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – Deprecated, see channels
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **scaling** (`Optional`\[`float`]) – Deprecated, see scale
    *   **channels** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  <span id="snapshot-flatten" />

  ### flatten

  <Function id="qiskit.pulse.instructions.Snapshot.flatten" signature="Snapshot.flatten()">
    Return itself as already single instruction.

    **Return type**

    [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")
  </Function>

  <span id="snapshot-insert" />

  ### insert

  <Function id="qiskit.pulse.instructions.Snapshot.insert" signature="Snapshot.insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (`ScheduleComponent`) – Schedule to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="snapshot-shift" />

  ### shift

  <Function id="qiskit.pulse.instructions.Snapshot.shift" signature="Snapshot.shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="snapshot-union" />

  ### union

  <Function id="qiskit.pulse.instructions.Snapshot.union" signature="Snapshot.union(*schedules, name=None)">
    Return a new schedule which is the union of self and schedule.

    **Parameters**

    *   **\*schedules** – Schedules to be take the union with this Instruction.
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>
</Class>

